| Summary: | ASTERISK-29803: pbx_variables: cp4 variables is used uninitialized | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2021-12-13 16:49:01.000-0600 | Date Closed: | 2021-12-15 10:49:11.000-0600 |
| Priority: | Critical | Regression? | |
| Status: | Closed/Complete | Components: | PBX/General |
| Versions: | 18.9.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian 11 | Attachments: | |
| Description: | GCC must be getting more stringent every day.
Asterisk no longer compiles because of this: {noformat} pbx_variables.c: In function ‘pbx_substitute_variables_helper_full_location’: pbx_variables.c:778:7: error: ‘cp4’ may be used uninitialized in this function [-Werror=maybe-uninitialized] 778 | if (cp4) { | ^ pbx_variables.c:694:10: note: ‘cp4’ was declared here 694 | char *cp4; | ^~~ {noformat} Initializing cp4 to NULL fixes the issue. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-12-13 16:49:02.296-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-12-15 10:49:12.478-0600 Change 17654 merged by Friendly Automation: pbx_variables: initialize uninitialized variable [https://gerrit.asterisk.org/c/asterisk/+/17654|https://gerrit.asterisk.org/c/asterisk/+/17654] By: Friendly Automation (friendly-automation) 2021-12-15 10:49:36.401-0600 Change 17689 merged by Friendly Automation: pbx_variables: initialize uninitialized variable [https://gerrit.asterisk.org/c/asterisk/+/17689|https://gerrit.asterisk.org/c/asterisk/+/17689] By: Friendly Automation (friendly-automation) 2021-12-15 10:49:59.802-0600 Change 17688 merged by Friendly Automation: pbx_variables: initialize uninitialized variable [https://gerrit.asterisk.org/c/asterisk/+/17688|https://gerrit.asterisk.org/c/asterisk/+/17688] By: Friendly Automation (friendly-automation) 2021-12-15 10:58:09.035-0600 Change 17690 merged by Friendly Automation: pbx_variables: initialize uninitialized variable [https://gerrit.asterisk.org/c/asterisk/+/17690|https://gerrit.asterisk.org/c/asterisk/+/17690] | ||